--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,12 @@
 
   <properties>
     <vertx.version>3.9.4</vertx.version>
-    <vertx.grpc.version>1.16.1</vertx.grpc.version>
+    <protoc.version>3.5.1</protoc.version>
+    <vertx.grpc.version>1.25.0</vertx.grpc.version>
+
     <junit.version>4.13.1</junit.version>
     <logback-classic.version>1.2.3</logback-classic.version>
-    <protobuf-java-util.version>3.9.1</protobuf-java-util.version>
+    <protobuf-java-util.version>3.13.0</protobuf-java-util.version>
   </properties>
 
   <dependencies>
@@ -125,7 +127,7 @@
         <version>0.6.1</version>
         <extensions>true</extensions>
         <configuration>
-          <protocArtifact>com.google.protobuf:protoc:3.5.1:exe:${os.detected.classifier}</protocArtifact>
+          <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
           <pluginId>grpc-java</pluginId>
           <pluginArtifact>io.vertx:protoc-gen-grpc-java:${vertx.grpc.version}:exe:${os.detected.classifier}
           </pluginArtifact>
